--- a/PFE/latex/titlepage.tex
+++ b/PFE/latex/titlepage.tex
@@ -52,7 +52,8 @@
     2021 / 2022
 
     \hspace{0.2in}
-    \large{\textbf{Spécialité \, :}  Technologie de l'information}
+    \large{\textbf{Spécialité \, :}  Technologie de l'information 
+    % Ingénierie du Logiciel et Traitement de l'Information}
 
     \begin{center}
         \begin{large}
