--- a/PFE/latex/introduction.tex
+++ b/PFE/latex/introduction.tex
@@ -18,9 +18,9 @@ Blood carries out many vital functions as it circulates through the body. It tra
 
 Earlier hematologists were performing microscopic Copied selected text to selection primary: examination and counting of blood cells manually, which  was very time-consuming and tedious process. Also, the accuracy of counting mainly depends on their expertise skill and their physical conditions, and because of cells complex nature, it still remains a challenging task to segment cells from its background and count them automatically.
 
-Our work is to automate the task of cell counting, we will  try to find the best solution to preform the complete blood count (CBC), The solution is devided on two parts.
+Our work is to automate the task of cell counting, we will  try to find the best solution to preform the complete blood count (CBC), The solution is divided on two parts.
 The first part is the segmentation where we need to segment the image to remove the noise and get a clear mask on which we are going preform the counting.In this phase we are comparing between two convolutional neural networks U-Net and SegNet.
-The second part is the counting phase in which we will take  the output mask from the first phase and apply counting algorimths on it. We used 3 algorithms to count the cells Watershed, Connected Component Labeling, Circle Hough transform.\
+The second part is the counting phase in which we will take  the output mask from the first phase and apply counting algorithms on it. We used 3 algorithms to count the cells Watershed, Connected Component Labeling, Circle Hough transform.\
 This thesis is presented in four chapters:\\
 In the first chapter \textbf{Blood Cells} we present the medical background of blood cells and the importance of the complete blood count.\\
 In the second chapter \textbf{State Of The Art} we studied the diversity of state of the art methods and we preformed a comparative study.\\
